test-suite/bugs/closed/bug_3186.v
(* Testing occur-check modula equivalence generated by evar-evar problems *)
Fail Fixpoint a (_:unit):=
match eq_refl with
|eq_refl => a
end.
